--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ full = ["net"]
 net = []
 
 [dev-dependencies]
+tokio = { version = "1", features = ["full"] }
 tokio-test = { version = "0.4" }
 tokio-stream = { version = "0.1" }
 futures = { version = "0.3", features = ["async-await"] }
