--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,14 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toolchain:
-          - stable
-          - nightly
-
     steps:
     - uses: actions/checkout@v4
 
     - name: Install Rust
-    - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      uses: dtolnay/rust-toolchain@stable
+      with:
+          toolchain: nightly
+          components: miri
 
     - name: Install cargo-nextest
       uses: taiki-e/install-action@v2
@@ -33,4 +30,4 @@ jobs:
       run: cargo +nightly miri nextest run --no-fail-fast
 
     - name: Run tests
-      run: cargo nextest run
+      run: cargo nextest run --no-fail-fast
