Refactor: Rewrite async net io adapter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,8 @@ jobs:
     - name: Run miri
       run: cargo +nightly miri nextest run --no-fail-fast
 
+    - name: Run doc test
+      run: cargo test --doc
+
     - name: Run tests
       run: cargo nextest run --no-fail-fast
