--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 nio-task = { path = "../nio-task", version = "*" }
 nio-threadpool = { path = "../nio-threadpool", version = "*" }
+
+crossbeam-queue = "0.3"
