--- a/libs/nio-task/Cargo.toml
+++ b/libs/nio-task/Cargo.toml
@@ -3,6 +3,12 @@ name = "nio-task"
 version = "0.0.1"
 edition = "2024"
 
+license = "Apache-2.0"
+keywords = ["nio", "async", "task"]
+authors = ["Nur <nurmohammed840@gmail.com>"]
+repository = "https://github.com/nurmohammed840/nio"
+description = "async task implementation"
+
 [dependencies]
 
 [dev-dependencies]
