--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 nio-task = { path = "../nio-task", version = "*" }
 nio-future = { path = "../nio-future", version = "*" }
 nio-threadpool = { path = "../nio-threadpool", version = "*" }
+nio-macro = { path = "../nio-macros", version = "*" }
 
 crossbeam-queue = "0.3"
