--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-mio = "1"
+mio = { version = "1", features = ["os-poll", "net"] }
 nio-task = { path = "../nio-task", version = "*" }
 nio-future = { path = "../nio-future", version = "*" }
 nio-threadpool = { path = "../nio-threadpool", version = "*" }
