--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -12,6 +12,14 @@ nio-macro = { path = "../nio-macros", version = "*" }
 
 crossbeam-queue = "0.3"
 
+tokio = { version = "1", default-features = false, optional = true }
+futures = { version = "0.3", default-features = false, optional = true }
+
+[features]
+default = ["futures-io"]
+tokio-io = ["dep:tokio"]
+futures-io = ["dep:futures"]
+
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
   "cfg(mio_unsupported_force_poll_poll)",
