--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -13,12 +13,12 @@ nio-macro = { path = "../nio-macros", version = "*" }
 crossbeam-queue = "0.3"
 
 tokio = { version = "1", default-features = false, optional = true }
-futures = { version = "0.3", default-features = false, optional = true }
+futures-io = { version = "0.3", default-features = false, optional = true }
 
 [features]
 default = ["futures-io"]
 tokio-io = ["dep:tokio"]
-futures-io = ["dep:futures"]
+futures-io = ["dep:futures-io"]
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
