--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -28,6 +28,7 @@ unexpected_cfgs = { level = "warn", check-cfg = [
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 futures-lite = { version = "2" }
+bytes = { version = "1" }
 
 [[test]]
 name = "async_io_test_suite"    # The name of the test binary
