--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -28,6 +28,7 @@ unexpected_cfgs = { level = "warn", check-cfg = [
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 futures-lite = { version = "2" }
+futures = "*"
 tokio-test = { version = "0.4.0" }
 pin-project-lite = "*"
 # bytes = { version = "1" }
