removed old proc macro

--- a/libs/nio-macros/Cargo.toml
+++ b/libs/nio-macros/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "nio-macro"
+name = "nio-macros"
 version = "0.1.0"
 edition = "2024"
+
+license = "Apache-2.0"
+description = """
+Nio's proc macros.
+"""
 
 [lib]
 proc-macro = true
