--- a/libs/nio-rt/Cargo.toml
+++ b/libs/nio-rt/Cargo.toml
@@ -8,7 +8,7 @@ mio = { version = "1", features = ["os-poll", "net"] }
 nio-task = { path = "../nio-task", version = "*" }
 nio-future = { path = "../nio-future", version = "*" }
 nio-threadpool = { path = "../nio-threadpool", version = "*" }
-nio-macro = { path = "../nio-macros", version = "*" }
+nio-macros = { path = "../nio-macros", version = "*" }
 
 crossbeam-queue = "0.3"
 
