--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -31,6 +31,11 @@ name = "spawn"
 path = "spawn.rs"
 harness = false
 
+[[bench]]
+name = "spawn_blocking"
+path = "spawn_blocking.rs"
+harness = false
+
 # [[bench]]
 # name = "sync_broadcast"
 # path = "sync_broadcast.rs"
