--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -36,10 +36,10 @@ name = "spawn_blocking"
 path = "spawn_blocking.rs"
 harness = false
 
-# [[bench]]
-# name = "sync_broadcast"
-# path = "sync_broadcast.rs"
-# harness = false
+[[bench]]
+name = "rt_current_thread"
+path = "rt_current_thread.rs"
+harness = false
 
 # [[bench]]
 # name = "sync_mpsc_oneshot"
