--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -65,6 +65,16 @@ path = "sync_notify.rs"
 harness = false
 
 [[bench]]
+name = "sync_semaphore"
+path = "sync_semaphore.rs"
+harness = false
+
+[[bench]]
+name = "sync_watch"
+path = "sync_watch.rs"
+harness = false
+
+[[bench]]
 name = "timer"
 path = "timer.rs"
 harness = false
