--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
       with:
           toolchain: nightly
-          components: miri
+          components: miri, clippy
 
     - name: Install cargo-nextest
       uses: taiki-e/install-action@v2
