--- a/libs/nio-future/Cargo.toml
+++ b/libs/nio-future/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "nio-future"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2024"
+
+license = "Apache-2.0"
+keywords = ["nio", "async"]
+authors = ["Nur <nurmohammed840@gmail.com>"]
+repository = "https://github.com/nurmohammed840/nio"
+description = "async future utilities"
 
 [dependencies]
