--- a/libs/nio-metrics/Cargo.toml
+++ b/libs/nio-metrics/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "nio-metrics"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2024"
+
+license = "Apache-2.0"
+keywords = ["nio", "metrics"]
+authors = ["Nur <nurmohammed840@gmail.com>"]
+repository = "https://github.com/nurmohammed840/nio"
+description = "Metrics collection and reporting for nio runtime"
 
 [dependencies]
